# glmnet-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/glmnet-core/: Cargo.toml
crates/glmnet-core/examples/: bench_core.rs
crates/glmnet-core/src/: binomial.rs  control.rs  error.rs  gaussian.rs  glm_matrix.rs  kernel.rs  lib.rs  matrix.rs  poisson.rs  standardize.rs
crates/glmnet-core/tests/: parity.rs
crates/glmnet-py/: Cargo.toml
crates/glmnet-py/src/: lib.rs
datasets/: README.md
docs/: PORTING.md  RELEASING.md  ROADMAP.md
examples/: glmnet_demo.ipynb
python/glmnet/: __init__.py  _path.py  cv.py  sklearn.py
python/glmnetrs/: __init__.py  _path.py  cv.py  plot.py  sklearn.py
scripts/: bench.R  bench.py  build_notebook.py  compare_datasets.R  compare_datasets.py  gen_fixtures.R  gen_fixtures_binomial.R  gen_fixtures_cv.R  gen_fixtures_poisson.R  gen_fixtures_sparse.R  gen_fixtures_sparse_glm.R
tests/: test_python.py
tests/fixtures/: bin_boxconstraint.json  bin_constcol.json  bin_correlated.json  bin_dfmax.json  bin_enet_a50.json  bin_imbalanced.json  bin_lasso_n200_p20.json  bin_lmr_tiny.json  bin_nlambda30.json  bin_nointercept.json  bin_nonneg.json  bin_nostd.json  bin_nostd_nointercept.json  bin_p150_n80.json  bin_penfactor.json  bin_penfactor_hetero.json  bin_pmax.json  bin_ridge_a0.json  bin_userlambda.json  bin_weights.json  cv_binomial_class.json  cv_binomial_deviance.json  cv_binomial_mse.json  cv_gaussian_enet.json  cv_gaussian_mae.json  cv_gaussian_mse.json  cv_poisson_deviance.json  cv_poisson_mse.json  enet_a50_n100_p20.json  enet_boxconstraint.json  enet_p200_n50.json  enet_weights.json  lasso_constcol.json  lasso_correlated.json  lasso_dfmax.json  lasso_lmr_tiny.json  lasso_lowerlimit0.json  lasso_n100_p20.json  lasso_nlambda20.json  lasso_nointercept.json  (+55 more)
